# LPParser

./: CMakeLists.txt  LICENSE  README.md  clang_format.sh  main.cpp
include/: Parser.hpp  Problem.hpp
src/: CMakeLists.txt  Parser.cpp
